[package]
name = "hntc"
description = "(Useless) HN Terminal Client"
version = "0.1.0"

authors = ["Giulio Russo <me@giuuliorusso.me>"]
license = "MIT"

edition = "2018"

[dependencies]
chrono = "0.4.19"
crossterm = "0.23.2"
futures = "0.3.21"
open = "2.1.2"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.138", features = ["derive"] }
structopt = "0.3.26"
tokio = { version = "1.18.2", features = ["full"] }
tui = { version = "0.18.0", features = ["crossterm"], default-features = false }
