[package]
name = "hntc"
description = "(Useless) HN Terminal Client"
version = "0.1.0"

authors = ["Giulio Russo <me@giuuliorusso.me>"]
license = "MIT"

edition = "2018"

[dependencies]
chrono = "0.4.20"
crossterm = "0.25.0"
futures = "0.3.21"
open = "3.2.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
structopt = "0.3.26"
tokio = { version = "1.19.2", features = ["full"] }
tui = { version = "0.19.0", features = ["crossterm"], default-features = false }
