[package]
name = "hntc"
description = "(Useless) HN Terminal Client"
version = "0.1.0"

authors = ["Giulio Russo <me@giuuliorusso.me>"]
license = "MIT"

edition = "2018"

[dependencies]
chrono = "0.4.26"
crossterm = "0.26.1"
futures = "0.3.28"
open = "5.0.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.177", features = ["derive"] }
structopt = "0.3.26"
tokio = { version = "1.19.2", features = ["full"] }
tui = { version = "0.19.0", features = ["crossterm"], default-features = false }
